--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,14 +14,14 @@
 
     <testsuites>
         <testsuite name="Project Test Suite">
-            <directory>tests</directory>
+            <directory>Tests</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>Annotations</directory>
-			<directory>vendor</directory>
+            <directory>Controller</directory>
+			<directory>Service</directory>
         </whitelist>
     </filter>
 </phpunit>
