MASTER - Add namespace for authentication with Anonymous user 	modified:   Resources/config/parameters.yml 	modified:   Resources/config/services.yml 	modified:   Service/IzbergClient.php

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -8,6 +8,7 @@ services:
         calls:
             - [setIzbergConnector, ['@izberg_connector']]
             - [setHttpClient, ['@guzzle_client']]
+            - [setNameSpace, ['%izberg_namespace%']]
       izberg_user:
         class: judicaelpaquet\IzbergBundle\Service\IzbergUser
         parent: izberg_client
